<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="5dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        >

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:srcCompat="@drawable/ic_calendar"
            android:id="@+id/ivDate"
            app:layout_constraintTop_toBottomOf="@+id/tvContent"
            android:layout_marginTop="5dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:gravity="center_vertical"
            android:id="@+id/tvDate"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@+id/ivDate"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:text="25/08/2021"
            android:textColor="@color/black"
            android:fontFamily="@font/imprima"
            app:layout_constraintTop_toBottomOf="@+id/tvContent"
            android:layout_marginTop="5dp"
            />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:id="@+id/ivTime"
            app:layout_constraintStart_toEndOf="@+id/tvDate"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="5dp"
            app:srcCompat="@drawable/ic_time"
            app:layout_constraintTop_toBottomOf="@+id/tvContent"
            android:layout_marginTop="5dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:gravity="center_vertical"
            android:id="@+id/tvTime"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@+id/ivTime"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:text="23:00"
            android:textColor="@color/black"
            android:fontFamily="@font/imprima"
            app:layout_constraintTop_toBottomOf="@+id/tvContent"
            android:layout_marginTop="5dp"
            />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/imprima"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toStartOf="@+id/ivDone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Titulo" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivDone"
            android:layout_width="0dp"
            android:layout_height="18dp"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toStartOf="@+id/ivEdit"
            app:layout_constraintStart_toEndOf="@id/tvTitle"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_pending"
            android:scaleType="fitStart"
            android:layout_marginStart="5dp"
            android:contentDescription="@string/label_done"
            />

        <TextView
            android:id="@+id/tvContent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/imprima"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/ivEdit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle"
            tools:text="TextView" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:id="@+id/ivDelete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:srcCompat="@drawable/ic_delete"
            android:layout_marginEnd="5dp"
            android:contentDescription="@string/label_delete"
            android:clickable="true"
            android:focusable="true"
            />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:id="@+id/ivEdit"
            app:layout_constraintEnd_toStartOf="@+id/ivDelete"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivDone"
            app:srcCompat="@drawable/ic_edit"
            android:layout_marginEnd="5dp"
            android:contentDescription="@string/label_edit"
            android:clickable="true"
            android:focusable="true"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>